Enabled udp, I hope ;)

--- a/influxdb/influxdb.conf
+++ b/influxdb/influxdb.conf
@@ -401,9 +401,9 @@
 ###
 
 [[udp]]
-  # enabled = false
-  # bind-address = ":8089"
-  # database = "udp"
+  enabled = false
+  bind-address = ":8089"
+  database = "udp"
   # retention-policy = ""
 
   # These next lines control how batching works. You should have this enabled
